src/components/Pages/PlayersPage/PlayerCard/ToolTip.module.scss
.customTooltip {
  position: absolute;
  left: 50%;
  bottom: 20px;
  translate: -50% 0;
  background: #1f2937;
  color: #f9fafb;
  padding: 8px 12px;
  border-radius: 6px;
  font-size: .75rem;
  white-space: nowrap;
  z-index: 10;
  border: 1px solid #374151;
  box-shadow: 0 4px 12px rgba(0, 0, 0, .4);
  pointer-events: none;
  opacity: 0;
  transition: opacity .3s ease;

  -webkit-background-clip: initial;
  background-clip: initial;
  -webkit-text-fill-color: initial;
}

@media (max-width: 1320px) {
  .customTooltip {
    left: calc(50% - 14px);
  }
}

@media (max-width: 768px) {
  .customTooltip {
    left: -128px;
    translate: 0;
  }
}

